--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -33,7 +33,7 @@ jobs:
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }} .
 
       - name: DockerHub Push
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
+        run: docker push ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
 
       - name: Application Run
         uses: appleboy/ssh-action@v0.1.6
