--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -30,7 +30,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Docker Image Build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }} .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }} .
 
       - name: DockerHub Push
         run: docker push ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
