--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -46,10 +46,10 @@ jobs:
               sudo docker kill ${{ secrets.PROJECT_NAME }}
               sudo docker rm -f ${{ secrets.PROJECT_NAME }}
             fi
-            if sudo docker images | grep -q "${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}"; then
-              sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
+            if sudo docker images | grep -q "${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}"; then
+              sudo docker rmi ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
             fi
-            sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
+            sudo docker pull ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
             sudo docker run -p ${{ secrets.SERVER_PORT }}:${{ secrets.SERVER_PORT }} \
               --name ${{ secrets.PROJECT_NAME }} \
               -e MARIADB_ENDPOINT=db \
