--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -49,6 +49,7 @@ jobs:
             if sudo docker images | grep -q "${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}"; then
               sudo docker rmi ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
             fi
+            sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             sudo docker pull ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
             sudo docker run -p ${{ secrets.SERVER_PORT }}:${{ secrets.SERVER_PORT }} \
               --name ${{ secrets.PROJECT_NAME }} \
