--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
+
+src/main/resources/apple
