--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,11 @@ dependencies {
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.20'
+
+	//apple private key signature
+	implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
+	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
+
 }
 
 tasks.named('test') {
