--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,9 @@ oauth:
     appleTeamId: ${APPLE_TEAM_ID}
     appleBundleId: ${APPLE_BUNDLE_ID}
     classpath: ${APPLE_KEY_CLASSPATH}
+
+server:
+  ssl:
+    key-store: /ssl/keystore.p12
+    key-store-type: PKCS12
+    key-store-password: ${KEY_STORE_PASSWORD}
