--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -31,6 +31,6 @@ jwt:
 
 server:
   ssl:
-    key-store: /ssl/keystore.p12
+    key-store: classpath:ssl/keystore.p12
     key-store-type: PKCS12
     key-store-password: ${KEY_STORE_PASSWORD}
