--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -29,8 +29,8 @@ jwt:
   token:
     secret: ${JWT_SECRET}
 
-server:
-  ssl:
-    key-store: classpath:ssl/keystore.p12
-    key-store-type: PKCS12
-    key-store-password: ${KEY_STORE_PASSWORD}
+#server:
+#  ssl:
+#    key-store: classpath:ssl/keystore.p12
+#    key-store-type: PKCS12
+#    key-store-password: ${KEY_STORE_PASSWORD}
