--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -26,7 +26,12 @@ jobs:
       - name: Create secret-key file
         run: |
           echo '${{ secrets.APPLE_SECRET_KEY }}' > src/main/resources/apple/AuthKey_32NZF755K3.p8
-          echo '${{ secrets.SSH_SECRET_KEY }}' | base64 --decode -i > keystore.p12
+          echo '${{ secrets.SSH_SECRET_KEY }}' | base64 --decode -i > src/main/resource/keystore.p12
+
+      - name: List files in resources folder
+        run: |
+          ls src/main/resources/apple
+          ls src/main/resources/ssl
 
       - name: DockerHub Login
         uses: docker/login-action@v3
