--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -31,7 +31,7 @@ jwt:
 
 server:
   ssl:
-    key-store: keystore.p12
+    key-store: classpath:keystore.p12
     key-store-type: PKCS12
     key-store-password: ${KEY_STORE_PASSWORD}
     enabled: true
