fix : 폴더 확인 출력 수정

--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -31,7 +31,7 @@ jobs:
       - name: List files in resources folder
         run: |
           ls src/main/resources/apple
-          ls src/main/resources/ssl
+          ls src/main/resources/
 
       - name: DockerHub Login
         uses: docker/login-action@v3
