--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -28,9 +28,9 @@ jobs:
           echo '${{ secrets.APPLE_SECRET_KEY }}' > src/main/resources/apple/AuthKey_32NZF755K3.p8
 #          echo '${{ secrets.SSH_SECRET_KEY }}' | base64 --decode -i > src/main/resources/keystore.p12
 #
-#      - name: List files in resources folder
-#        run: |
-#          ls src/main/resources/apple
+      - name: List files in resources folder
+        run: |
+          ls src/main/resources/apple
 #          ls src/main/resources/
 
       - name: DockerHub Login
