core: azure file storage dependency add

--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 	implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
 	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
 
+	//Azure Storage
+	implementation 'com.azure:azure-storage-file-share:12.21.3'
+
 }
 
 tasks.named('test') {
