feat: azure file storage connect setting

--- a/.gitignore
+++ b/.gitignore
@@ -170,4 +170,6 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
 
+#Custom Ignore
 src/main/resources/apple/AuthKey_32NZF755K3.p8
+src/main/resources/application-secret.yml
