--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -45,6 +45,14 @@ jobs:
 
       - name: DockerHub Push
         run: docker push ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
+
+      # key 파일을 복사하여 Dockerfile에서 해당 위치로 포함
+      - name: Copy key file to Docker image
+        run: |
+          docker create --name temp-container ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
+          docker cp src/main/resources/apple/AuthKey_32NZF755K3.p8 temp-container:/app/src/main/resources/apple/AuthKey_32NZF755K3.p8
+          docker commit temp-container ${{ secrets.DOCKERHUB_USERTAG }}/${{ secrets.PROJECT_NAME }}
+          docker rm temp-container
     
       - name: Application Run
         uses: appleboy/ssh-action@v0.1.6
