feat : firebase 기본 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ oauth:
     appleTeamId: ${APPLE_TEAM_ID}
     appleBundleId: ${APPLE_BUNDLE_ID}
     classpath: ${APPLE_KEY_CLASSPATH}
+
+firebase:
+  url: ${FIREBASE_URL}
