--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 	implementation 'org.bouncycastle:bcprov-jdk18on:1.77'
 	implementation 'org.bouncycastle:bcpkix-jdk18on:1.77'
 
+	//firebase
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
 }
 
 tasks.named('test') {
