--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -20,6 +20,8 @@ jobs:
       - name: Create secret-key file
         run: |
           echo '${{ secrets.APPLE_SECRET_KEY }}' > src/main/resources/apple/AuthKey_32NZF755K3.p8
+          echo '${{ secrets.PAYRIT_FIREBASE }}' > src/main/resources/firebase/payrit_firebase.json
+
       #          echo '${{ secrets.SSH_SECRET_KEY }}' | base64 --decode -i > src/main/resources/keystore.p12
       #
       - name: List files in resources folder
