--- a/build.gradle
+++ b/build.gradle
@@ -74,3 +74,7 @@ tasks.named('asciidoctor') {
 	inputs.dir snippetsDir
 	dependsOn test
 }
+
+configurations.all {
+	exclude group: 'commons-logging', module: 'commons-logging'
+}
