--- a/.github/workflows/payrit-server.yml
+++ b/.github/workflows/payrit-server.yml
@@ -27,8 +27,8 @@ jobs:
       - name: List files in resources folder
         run: |
           ls src/main/resources/apple
-          cat src/main/resources/apple/AuthKey_32NZF755K3.p8
-          ls src/main/resources/
+          cat src/main/resources/apple/AuthKey_JNGL644KHU.p8
+          ls src/main/resources/firebase/payrit_firebase.json
 
 
       - name: Grant execute permission for gradlew
